--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Jekyll-Machine
+title: Bak Cheong-Kyung
 anthor:
   name: Bakcheongkyung
   email: draw.ch.b@gmail.com
@@ -9,7 +9,7 @@ lang: zh-CN
 since: 2013
 beian: 粤ICP备xxxxxxx号
 rss: /feed.xml
-baseurl: '' # the subpath of your site, e.g. /blog/
+baseurl: # the subpath of your site, e.g. /blog/
 url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   This is a Responsive Theme for Jekyll.
