title link change4

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ anthor:
   email: draw.ch.b@gmail.com
   twitter_username: ''
   github_username: Bakcheongkyung
-lang: ko
+lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
