--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-baseurl: # the subpath of your site, e.g. /blog/
+baseurl: https://github.com/BAKCHEONGKYUNG
 url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Bakcheongkyung Portfolio.
