--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-baseurl: 'https://bakcheongkyung.github.io' # the subpath of your site, e.g. /blog/
-# url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
+# baseurl: 'https://bakcheongkyung.github.io' # the subpath of your site, e.g. /blog/
+url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Bakcheongkyung Portfolio.
 
