--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ title: Bak Cheong-Kyung
 anthor:
   name: Bakcheongkyung
   email: draw.ch.b@gmail.com
-  twitter_username: ''
+  twitter_username:
   github_username: Bakcheongkyung
 lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-# baseurl: 'https://bakcheongkyung.github.io' # the subpath of your site, e.g. /blog/
+baseurl: /bak-cheongkyung/ # the subpath of your site, e.g. /blog/
 url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Bakcheongkyung Portfolio.
@@ -19,7 +19,7 @@ theme_color: blue
 
 menu:
   - name: Home
-    url:
+    url: /index.html
   - name: Categories
     url: /categories/
   - name: Tags
@@ -28,7 +28,7 @@ menu:
     url: /about/
 
 # comments
-# disqus_shortname: jekyll-machine
+disqus_shortname: bak-cheongkyung
 
 # 社交链接
 social:
