--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-baseurl: /bak-cheongkyung/ # the subpath of your site, e.g. /blog/
+baseurl: # the subpath of your site, e.g. /blog/
 url: 'https://bakcheongkyung.github.io' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Bakcheongkyung Portfolio.
