--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-baseurl: / # the subpath of your site, e.g. /blog/
+baseurl: /bakcheongkyung.github.io/ # the subpath of your site, e.g. /blog/
 url: 'https://bakcheongkyung.github.io/' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
   Bakcheongkyung Portfolio.
@@ -19,13 +19,13 @@ theme_color: blue
 
 menu:
   - name: Home
-    url: {{ site.baseurl }}/
+    url: /
   - name: Categories
-    url: {{ site.baseurl }}/categories/
+    url: /categories/
   - name: Tags
-    url: {{ site.baseurl }}/tags/
+    url: /tags/
   - name: About
-    url: {{ site.baseurl }}/about/
+    url: /about/
 
 # comments
 disqus_shortname: bak-cheongkyung
