--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,13 @@
-# Site settings
-title: Bak Cheong-Kyung
-anthor:
-  name: Bakcheongkyung
-  email: draw.ch.b@gmail.com
-  twitter_username:
-  github_username: Bakcheongkyung
+# Site settings, 기본정보 입력
+title: 노력으로 발전하는 개발자 Blog
 lang: ko-KR
 since: 2023
 beian:
 rss: /feed.xml
-baseurl: '' # the subpath of your site, e.g. /blog/
+baseurl: # the subpath of your site, e.g. /blog/
 url: 'https://bakcheongkyung.github.io/' # the base hostname & protocol for your site
 description: > # this means to ignore newlines until "baseurl:"
-  Bakcheongkyung Portfolio.
+  Dev Bakcheongkyung Portfolio.
 
 # 主题颜色 red/green/blue (default:blue)
 theme_color: blue
@@ -30,7 +25,13 @@ menu:
 # comments
 disqus_shortname: bak-cheongkyung
 
-# 社交链接
+# 프로필 영역
+anthor:
+  name: Bakcheongkyung
+  email: draw.ch.b@gmail.com
+  github_username: Bakcheongkyung
+
+# footer 영역
 social:
   - name: Github
     url: https://github.com/BAKCHEONGKYUNG
@@ -45,11 +46,13 @@ social:
 # Build settings
 destination: _site
 encoding: utf-8
-timezone: Asia/Korea
-#feture:             true
+timezone: Asia/Seoul
+asset_url: /assets
+
+# Outoutting
 permalink: /:year/:title/
-paginate: 10
-paginate_path: /page:num
+paginate: 10 #Defaults : 5
+paginate_path: /page/:num/
 markdown: kramdown
 highlighter: rouge
 lsi: false
@@ -77,7 +80,7 @@ kramdown:
 # Plugins
 whitelist: []
 gems:
-  - jekyll-paginate
+  - jekyll-paginate-v2
   - jekyll-mentions # activesupport requires Ruby version >= 2.2.2
   - jemoji
   - jekyll-redirect-from
