_config.yml 'url: /index.html' add

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ theme_color: blue
 
 menu:
   - name: Home
-    url: /
+    url: /index.html
   - name: Categories
     url: /categories
   - name: Tags
